# SZ

./: CMakeLists.txt
example/: CMakeLists.txt
sz/src/: CMakeLists.txt
